2004-10-29  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_src_event),
	(gst_ogg_demux_push):
	  Make seeking sort-of exact again (fixes #156387).

2004-10-29  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/playback/gstplaybasebin.c: (unknown_type),
	(add_element_stream), (new_decoded_pad),
	(gst_play_base_bin_change_state):
	* gst/playback/gststreaminfo.c: (gst_stream_info_class_init),
	(gst_stream_info_init), (gst_stream_info_new),
	(gst_stream_info_dispose), (gst_stream_info_get_property):
	* gst/playback/gststreaminfo.h:
	  Make caps explicitely available. Makes testing for unsupported
	  types possible. Improves error reporting.

2004-10-29  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/audioconvert/gstaudioconvert.c:
	(gst_audio_convert_buffer_to_default_format):
	  Really don't touch read-only buffers (#156563).

2004-10-29  Sebastien Cote  <sc5@hermes.usherb.ca>

	Reviewd by:  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/wavparse/gstwavparse.c: (gst_wavparse_fmt):
	  Fix memleak (#155223).

2004-10-29  Wim Taymans  <wim@fluendo.com>

	* gst/tcp/.cvsignore:
	* gst/tcp/gstmultifdsink.c: (gst_sync_method_get_type),
	(gst_multifdsink_class_init), (gst_multifdsink_init),
	(gst_multifdsink_add), (gst_multifdsink_remove),
	(gst_multifdsink_remove_client_link), (is_sync_frame),
	(gst_multifdsink_new_client),
	(gst_multifdsink_handle_client_write),
	(gst_multifdsink_recover_client), (gst_multifdsink_queue_buffer),
	(gst_multifdsink_handle_clients), (gst_multifdsink_set_property),
	(gst_multifdsink_get_property):
	* gst/tcp/gstmultifdsink.h:
	Added burst on connect sync_method, deprecated sync_clients,
	streamlined the sync code some more.

2004-10-29  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* gst/playback/gstplaybasebin.c: (thread_error), (setup_source),
	(gst_play_base_bin_change_state):
	  Improve error reporting.

2004-10-28  Wim Taymans  <wim@fluendo.com>

	* gst/tcp/Makefile.am: